force-app/main/default/objects/Fraud_Alert__c/Fraud_Alert__c.object-meta.xml
<CustomObject>
    <label>Fraud Alert</label>
    <nameField>
        <label>Fraud Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fraud Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>