force-app/main/default/objects/Fraud_Alert__c/fields/Alert_ID__c.field-meta.xml
<CustomField>
    <fullName>Alert_ID__c</fullName>
    <displayFormat>FRAUD-{0000}</displayFormat>
    <label>Alert ID</label>
    <type>AutoNumber</type>
</CustomField>