force-app/main/default/objects/Fraud_Alert__c/fields/Alert_Status__c.field-meta.xml
<CustomField>
    <fullName>Alert_Status__c</fullName>
    <label>Alert Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>