force-app/main/default/objects/Fraud_Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unauthorized Transaction</fullName>
            </value>
            <value>
                <fullName>Account Lock</fullName>
            </value>
            <value>
                <fullName>Suspicious Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>