force-app/main/default/objects/Fraud_Alert__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Customer</relationshipLabel>
    <relationshipName>Customer_Fraud_Alert</relationshipName>
    <type>Lookup</type>
</CustomField>