force-app/main/default/objects/Fraud_Alert__c/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolved By</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee</relationshipLabel>
    <relationshipName>Resolved_By_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>